--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img src="./img/tampabay.png" style="vertical-align:middle" alt="Tampabay" width="200" height="75" class="navbar-brand">
         <a href="index.html" class="navbar-item">Home</a>
         <link><a href="interest.html" class="navbar-item">Interest</a><link />
+        <link><a href="covid.html" class="navbar-item">Covid Recommendations</a><link />
         <link><a href="recommendations.html" class="navbar-item">Recommendations</a><link />
         <a class="navbar-right">Visit Tampa Bay</a>
     </div>
@@ -51,56 +52,19 @@
         <div class="row">
             <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
             <div class="column">
+                <script src="./js/main.js"></script>
                 <script>
-                    var xValues = ["0-9", "10-19", "20-29", "30-39", "40-49", "50-59", "60-69", "70-79", "80+"];
-                    var yValues = [12, 13, 16, 15, 13, 13, 10, 5, 3];
-                    var barColors = ["red", "green", "blue", "orange", "brown", "gold", "black", "skyblue", "darkgreen"];
-
-                    new Chart("myChart", {
-                        type: "bar",
-                        data: {
-                            labels: xValues,
-                            datasets: [{
-                                backgroundColor: barColors,
-                                data: yValues
-                            }]
-                        },
-                        options: {
-                            legend: { display: false },
-                            title: {
-                                display: true,
-                                text: "Population by Age Group"
-                            }
-                        }
-                    });
+                    mychartbar;
                 </script>
             </div>
             <canvas id="myChart2" style="width:100%;max-width:600px"></canvas>
-            <div class="column";>
+            <div class="column" ;>
+            <script src="./js/main.js"></script>
                 <script>
-                    var xValues = ["White", "African American", "Asian", "Two or More Races", "Some Other Race", "American Indian Alaskan Native", "Native Hawaiian and Other Pacific Islander"];
-                    var yValues = [65.41, 23.62, 4.31, 3.86, 2.46, 0.28, 0.07];
-                    var barColors = ["red", "green", "blue", "orange", "brown", "gold", "black", "skyblue", "darkgreen"];
-
-                    new Chart("myChart2", {
-                        type: "doughnut",
-                        data: {
-                            labels: xValues,
-                            datasets: [{
-                                backgroundColor: barColors,
-                                data: yValues
-                            }]
-                        },
-                        options: {
-                            legend: { display: true },
-                            title: {
-                                display: true,
-                                text: "Population by Ethinicity"
-                            }
-                        }
-                    });
+                    mychart;
                 </script>
             </div>
+
         </div>
         <p>
             <b>Fun Facts about Tampa Bay FL</b>
