--- a/Interest.html
+++ b/Interest.html
@@ -11,10 +11,11 @@
 
 <body>
     <div class="navbar">
-        <img src="./img/tampabay.png" style="vertical-align:middle" alt="Tampabay" width="200" height="100" class="navbar-brand">
+        <img src="./img/tampabay.png" style="vertical-align:middle" alt="Tampabay" width="200" height="75" class="navbar-brand">
         <a href="index.html" class="navbar-item">Home</a>
         <link><a href="interest.html" class="navbar-item">Interest</a><link />
         <link><a href="recommendations.html" class="navbar-item">Recommendations</a><link />
+        <a class="navbar-right">Visit Tampa Bay</a>
     </div>
 
     <div class="container">
