--- a/Interest.html
+++ b/Interest.html
@@ -14,8 +14,9 @@
     <div class="navbar">
         <img src="./img/tampabay.png" style="vertical-align:middle" alt="Tampabay" width="200" height="75" class="navbar-brand">
         <a href="index.html" class="navbar-item">Home</a>
-        <link><a href="interest.html" class="navbar-item">Interest</a><link />
-        <link><a href="recommendations.html" class="navbar-item">Recommendations</a><link />
+        <link><a href="Interest.html" class="navbar-item">Interest</a><link />
+        <link><a href="COVID Resources.html" class="navbar-item">Covid Recommendations</a><link />
+        <link><a href="Recommendations.html" class="navbar-item">Recommendations</a><link />
         <a class="navbar-right">Visit Tampa Bay</a>
     </div>
 
