--- a/Interest.html
+++ b/Interest.html
@@ -37,10 +37,10 @@
             <p style="font-size: 24px;color: blue;">The <strong>Tampa Bay Lightning</strong> (colloquially known as the Bolts) are a professional ice hockey team based in Tampa, Florida. They compete in the National Hockey League (NHL) as a member of the Atlantic Division in the Eastern Conference, and play their home games at <strong>Amalie Arena</strong> in Downtown Tampa. The Lightning have won three Stanley Cup championships: 2004, 2020, and 2021. They also reached the Stanley Cup Finals in 2015. The team is owned by Jeffrey Vinik, and the general manager is Julien BriseBois. Jon Cooper has served as head coach since 2013, and is the longest-tenured active head coach in the NHL.</p>
             <h3 style="font-size: 24px;color: blue;">Championships</h3>
             <ul style="font-size: 24px;color: blue;">
-                <li>Stanley Cups (3) - 2003–04, 2019–20, 2020–21</li>
-                <li>Conference Championships (3): 2003–04, 2014–15, 2019–20</li>
-                <li>Presidents' Trophy (1): 2018–19</li>
-                <li>Division Championships (4): 2002–03, 2003–04, 2017–18, 2018–19</li>
+                <li>Stanley Cups (3): 2003 - 2004, 2019 - 2020, 2020 - 2021</li>
+                <li>Conference Championships (3): 2003 - 2004, 2014 - 2015, 2019 - 2020</li>
+                <li>Presidents' Trophy (1): 2018 - 2019</li>
+                <li>Division Championships (4): 2002 - 2003, 2003 - 2004, 2017 - 2018, 2018 - 2019</li>
             </ul>
         </div>
     </div>
