Updated title to TampaBay in .html pages for CovidResources, Interest, and Recommendations

--- a/Interest.html
+++ b/Interest.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/Interest.css">
-    <title>Assignment - 3</title>
+    <title>TampaBay</title>
 </head>
 
 <body>
